Prevent overflow and clean some code

--- a/src/global.css
+++ b/src/global.css
@@ -115,7 +115,7 @@
             @apply my-3;
         }
 
-        .contents {
+        .blog-body {
             p, li, td {
                 font-family: var(--font-sans);
                 font-weight: normal;
@@ -305,8 +305,7 @@
     summary {
         @apply pb-1 mb-2;
         cursor: pointer;
-        font-weight: 500;
-        font-style: italic;
+        font-weight: 400;
         color: var(--color-foreground);
         border-bottom: 2px solid var(--color-foreground);
     }
